kubernetes/kube-deployment-files/inventory-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-app
  template:
    metadata:
      labels:
        app: inventory-app
    spec:
      containers:
      - name: inventory-app
        image: andvikram/inventory:latest
        command: ["/bin/bash"]
        args: ["-c", "/home/vikram/inventory/init.sh"]
        ports:
          - containerPort: 3000
      nodeSelector:
        nodetype: app
