kubernetes/kube-deployment-files/inventory-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-db
  labels:
    app: inventory-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-db
  template:
    metadata:
      labels:
        app: inventory-db
    spec:
      containers:
      - name: inventory-db
        image: mysql/mysql-server:5.7
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-initdb
          mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: mysql-initdb
          configMap:
            name: mysql-initdb-config
