kubernetes/kube-deployment-files/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: inventory-app
  type: ClusterIP
