kubernetes/kube-deployment-files/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  ports:
  - name: db-port
    protocol: TCP
    port: 3306
    targetPort: 3306
  selector:
    app: inventory-db
