kubernetes/kube-deployment-files/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: inventory-demo-ingress
spec:
  rules:
  - host: <your-domain-name-pointing-to-the-public-ip-of-slave-node-of-the-pod>
    http:
      paths:
      - path: /
        backend:
          serviceName: app-service
          servicePort: 80
